Aligned sidebar correctly

--- a/src/components/content/Content.css
+++ b/src/components/content/Content.css
@@ -7,6 +7,7 @@
     padding-left: 50px;
     margin-left: 7px;
     margin-top: 15px;
+    margin-right: 0%;
 }
 
 .content .bars-wrapper .popular-posts-title{
@@ -16,4 +17,5 @@
 
 .content .bars-wrapper .inside{
     display: flex;
+    margin: 0%;
 }
