--- a/src/components/content/mainbar/Mainbar.css
+++ b/src/components/content/mainbar/Mainbar.css
@@ -1,5 +1,5 @@
 .mainbar{
-    flex: 0.7;
+    flex: 0.95;
     
 }
 
